--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
   		<artifactId>org.eclipse.jgit</artifactId>
   		<version>3.1.0.201310021548-r</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-csv</artifactId>
+  		<version>1.1</version>
+  	</dependency>
   </dependencies>
 </project>
