--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
   		<artifactId>commons-csv</artifactId>
   		<version>1.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>nz.ac.waikato.cms.weka</groupId>
+  		<artifactId>weka-stable</artifactId>
+  		<version>3.6.10</version>
+  	</dependency>
   </dependencies>
 </project>
