Refactoring of DataSetBuilder

--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
   		<artifactId>weka-stable</artifactId>
   		<version>3.6.10</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-collections4</artifactId>
+  		<version>4.0</version>
+  	</dependency>
   </dependencies>
 </project>
