--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
   	</dependency>
   	<dependency>
   		<groupId>nz.ac.waikato.cms.weka</groupId>
-  		<artifactId>weka-stable</artifactId>
-  		<version>3.6.10</version>
+  		<artifactId>weka-dev</artifactId>
+  		<version>3.7.12</version>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.commons</groupId>
