--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
   		<artifactId>commons-collections4</artifactId>
   		<version>4.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.mahout.commons</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>2.0-mahout</version>
+  	</dependency>
   </dependencies>
 </project>
