--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
   		<artifactId>commons-cli</artifactId>
   		<version>2.0-mahout</version>
   	</dependency>
+  	<dependency>
+  	    <groupId>nz.ac.waikato.cms.weka</groupId> 
+        <artifactId>LibSVM</artifactId>
+        <version>1.0.6</version>
+  	</dependency>
   </dependencies>
   <build>
   <plugins>
